# shop-fastapi-nuxt-4

./: Makefile  docker-compose.prod.yml  docker-compose.yaml
api/: .dockerignore  .env.template  Dockerfile  fly.toml  pyproject.toml  pytest.ini  run.py  run_seed_cities_batch.py
api/app/: main.py
api/app/alembic/versions/: 2025_12_24_1801-a0906ca5afb0_create.py  2025_12_24_1819-121a1fa8606d_create.py  (+11 more)
api/app/certs/: jwt-private.pem  jwt-public.pem
api/app/core/: auth_security.py  config.py  db_helper.py  oauth.py  redis.py  ws_manager.py
api/app/enums/: __init__.py  auth.py
api/app/helpers/: auth.py
api/app/models/: __init__.py  city.py  enums.py  oauth_account.py  order.py  post.py  product.py  profile.py  refresh_token.py  user.py
api/app/repositories/: auth_repository.py  city_repository.py  oauth_repository.py  order_repository.py  post_repository.py  product_repository.py  profile_repository.py  user_repository.py
api/app/routes/: __init__.py  auth.py  cart.py  categories.py  city.py  oauth.py  orders.py  post.py  products.py  profile.py  user.py  ws_orders.py
api/app/schemas/: auth.py  city.py  order.py  paginate.py  post.py  product.py  profile.py  user.py
api/app/seed/: cities_seed_batch.py  products.py  xlsx_to_json.py
api/app/services/: auth_service.py  auth_validation.py  city_service.py  dependencies.py  oauth_service.py  order_service.py  post_service.py  product_service.py  profile_service.py  user_service.py
api/app/test/: conftest.py  test_auth.py
api/app/utils/: __init__.py  auth.py  redis_listener.py
client/: .prettierrc  (+5 more)
(+88 files in other folders)
