[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "bcrypt>=5.0.0",
    "black>=25.12.0",
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.124.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openpyxl>=3.1.5",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "shapely>=2.1.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "starlette>=0.50.0",
    "unicorn>=2.1.4",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest-anyio>=0.0.0",
]
